--- a/_portfolio/2021-06-06-Cupidme.md
+++ b/_portfolio/2021-06-06-Cupidme.md
@@ -11,7 +11,7 @@ tags: [Lorem, Ipsum]
 
 [CVE-2019-14813](https://echoctf.red/target/33)
 
-![](/assets/images/cupidme.png)
+![](assets/img//cupidme.png)
 
 TEE HEE HEE! Cupid, is an imaginary character. However, Cupid is not the only thing that is imaginary on this system (the box security is equally imaginary)...
 
@@ -53,7 +53,7 @@ checking the source code and i found this:
 unmarked it, and i got the upload form:
 
 
-![](/assets/images/upload_cupid.png)
+![](assets/img//upload_cupid.png)
 
 
 ### RCE
