--- a/_portfolio/2021-06-06-Smithers.md
+++ b/_portfolio/2021-06-06-Smithers.md
@@ -9,7 +9,6 @@ tags: [Lorem, Ipsum]
 
 
 [smithers](https://echoctf.red/target/5)
-![](/assets/images/smithers_site.png)
 
 
 machine description:
@@ -81,7 +80,7 @@ STORED
 now we got access to other page with option to run ping
 
 
-![](/assets/images/rce_smithers.png)
+![](assets/img/rce_smithers.png)
 
 ### Rce
 
@@ -89,12 +88,12 @@ now we got access to other page with option to run ping
 lets try to run ping with ;COMMAND
 
 
-![](/assets/images/Priv_sec_smithiers.png
+![](assets/img/Priv_sec_smithiers.png
 
 
 ### Privilege escalation
 
 
-![](/assets/images/Priv_sec_smithiers.png)
+![](assets/img/Priv_sec_smithiers.png)
                                                         
 as we can see the proceess is running as root.
