--- a/_portfolio/2021-06-06-Smithers.md
+++ b/_portfolio/2021-06-06-Smithers.md
@@ -88,7 +88,7 @@ now we got access to other page with option to run ping
 lets try to run ping with ;COMMAND
 
 
-![](/assets/img/Priv_sec_smithiers.png
+![](/assets/img/Priv_sec_smithiers.png)
 
 
 ### Privilege escalation
