added martin and fix tags

--- a/_posts/2021-06-06-Cupidme.md
+++ b/_posts/2021-06-06-Cupidme.md
@@ -4,7 +4,7 @@ title: cupidme
 feature-img: "assets/img/portfolio/cupidme.png"
 img: "assets/img/portfolio/cupidme.png"
 date: 06 Jun 2021
-tags: [Lorem, Ipsum]
+tags: [OpenSMTPD, PHP]
 ---
 
 
