--- a/_posts/2021-06-06-Smithers.md
+++ b/_posts/2021-06-06-Smithers.md
@@ -4,7 +4,7 @@ title: Smithers
 feature-img: "assets/img/portfolio/smithers_site.png"
 img: "assets/img/portfolio/smithers_site.png"
 date: 06 Jun 2021
-tags: [Lorem, Ipsum]
+tags: [memcached]
 ---
 
 
