--- a/_posts/2021-06-11-Flanders.md
+++ b/_posts/2021-06-11-Flanders.md
@@ -4,7 +4,7 @@ title: Flanders
 feature-img: "assets/img/portfolio/flanders.png"
 img: "assets/img/portfolio/flanders.png"
 date: 11 Jun 2021
-tags: [Lorem, Ipsum]
+tags: [CVE, libSSH, ID_RSA]
 ---
 
 
