--- a/_portfolio/2021-07-15-martin.md
+++ b/_portfolio/2021-07-15-martin.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Milhouse
+title: martin
 feature-img: "assets/img/portfolio/martin.png"
 img: "assets/img/portfolio/martin.png"
 date: 15 jul 2021
