--- a/_portfolio/2022-08-30-rootme.md
+++ b/_portfolio/2022-08-30-rootme.md
@@ -1,3 +1,16 @@
+---
+layout: post
+title: rootme
+feature-img: "assets/img/portfolio/rootme.png"
+img: "assets/img/portfolio/rootme.png"
+date: 30 aug 2021
+tags: [bin, php, rce]
+---
+
+
+
+
+
 rootme
 ip:10.10.212.108
 
